[package]
name = "cl-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
beacon-api-client = { path = "../beacon-api-client" }
clap = { version = "3.1.18", features = ["derive"] }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
tokio = { version = "1.0", features = ["full"] }
url = "2.2.2"
