[package]
name = "ctcl"
version = "0.1.0"
edition = "2021"

[dependencies]
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client" }
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
url = "2.2.2"
