[package]
name = "ctcl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool for analyzing the Ethereum consensus layer."
homepage = "https://github.com/lightclient/ctcl"
repository = "https://github.com/lightclient/ctcl"
readme = "README.md"
keywords = ["ethereum", "consensus-layer"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]

[dependencies]
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client" }
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
url = "2.2.2"
